; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_iterator.c_refs_foreach_name_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_iterator.c_refs_foreach_name_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @refs_foreach_name_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @refs_foreach_name_cb(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to i32*
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @git__strdup(i8* %9)
  %11 = call i32 @git_vector_insert(i32* %8, i32 %10)
  %12 = call i32 @cl_git_pass(i32 %11)
  ret i32 0
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_vector_insert(i32*, i32) #1

declare dso_local i32 @git__strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
